@@ -77,6 +77,7 @@
 	<label index="input.autocompleter">Autocomplete Input</label>
 	<label index="ajax.requestFailed">Cannot connect to server (connection or server down?)</label>
 	<label index="attr.is_active">Active</label>
+	<label index="attr.position">Position</label>
 	<label index="roles">Roles</label>
 	<label index="role">Role</label>
 	<label index="role.new">New Role</label>
