@@ -29,6 +29,8 @@ core 2.2.1 - not released yet
 	* Added: Support for SMTP accounts. Send emails over a (shared) SMTP account.
 	* Added: Signature in email from contact person record
 	* Added: TodoyuMailReceiver type 'simple'
+	* Added: TodoyuFormElement_Select->getSelectedValue() which returns the first selected value which is ok if multiple flag is not set
+	* Added: TodoyuViewHelper for general view helpers from core
 	* Changed: Removed $parseConstants from TodoyuArray::intExplode(). Was not used and supported. Added $limi parameter as for trimExplode()
 	* Changed: Use js version instead of php the check for the first input in form
 	* Changed: Update form XSD validation to match know field types only
